--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -47,7 +47,7 @@
     <string name="times_separator" msgid="6180368193321715816">"/"</string>
     <string name="user_tos_activity_intent" msgid="6097193356935501673">"intent:#Intent;action=com.android.car.SHOW_USER_TOS_ACTIVITY;B.show_value_prop=true;end"</string>
     <string name="recents_empty_state_text" msgid="6703106170272215731">"Nenhum item recente"</string>
-    <string name="recents_clear_all_text" msgid="2088678071417053923">"Limpar tudo"</string>
+    <string name="recents_clear_all_text" msgid="2088678071417053923">"Remover tudo"</string>
     <string name="failure_opening_recent_task_message" msgid="9097595793150874357">"O app não está disponível"</string>
     <string name="banner_title_text" msgid="8769404950674630387">"Para usar apps desativados pelos termos de serviço do usuário, aceite esses termos."</string>
     <string name="banner_review_button_text" msgid="8263234087487949865">"Revisar"</string>
