--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -44,7 +44,8 @@
     <string name="hide_debug_apps" msgid="6128313544379622475">"డీబగ్ యాప్‌లను దాచండి"</string>
     <string name="show_debug_apps" msgid="4521073121286325786">"డీబగ్ యాప్‌లను చూపించండి"</string>
     <string name="times_separator" msgid="6180368193321715816">"/"</string>
-    <string name="user_tos_activity_intent" msgid="6097193356935501673">"intent:#Intent;action=com.android.car.SHOW_USER_TOS_ACTIVITY;B.show_value_prop=true;end"</string>
+    <!-- no translation found for user_tos_activity_intent (2576362765182614557) -->
+    <skip />
     <string name="recents_empty_state_text" msgid="6703106170272215731">"ఇటీవలి ఐటెమ్‌లు ఏవీ లేవు"</string>
     <string name="recents_clear_all_text" msgid="2088678071417053923">"అన్నీ తీసివేయండి"</string>
     <string name="failure_opening_recent_task_message" msgid="9097595793150874357">"యాప్ అందుబాటులో లేదు"</string>
