--- a/docklib-util/res/values/strings.xml
+++ b/docklib-util/res/values/strings.xml
@@ -16,7 +16,6 @@
   -->
 
 <resources>
-    <!-- todo(b/314817575): update the string to final value -->
-    <string name="dock_pin_shortcut_label">Pin to the dock</string>
-    <string name="dock_unpin_shortcut_label">Unpin from the dock</string>
+    <string name="dock_pin_shortcut_label">Pin app</string>
+    <string name="dock_unpin_shortcut_label">Unpin app</string>
 </resources>
