--- a/docklib/res/values/strings.xml
+++ b/docklib/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="broadcast_receiver_permission_desc">
         Permission required for package listen to broadcast events for the Dock.
     </string>
+    <string name="pin_failed_no_spots">No spot available to pin</string>
 </resources>
