--- a/libs/car-launcher-common/res/values/strings.xml
+++ b/libs/car-launcher-common/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--
-  ~ Copyright (C) 2023 The Android Open Source Project
+  ~ Copyright (C) 2024 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,7 +15,20 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="dock_pin_shortcut_label">Pin app</string>
     <string name="dock_unpin_shortcut_label">Unpin app</string>
+    <string name="stop_app_shortcut_label">Stop app</string>
+    <string name="app_info_shortcut_label">App info</string>
+
+    <!-- Manage applications, title for dialog when killing persistent apps. [CHAR LIMIT=40] -->
+    <string name="stop_app_dialog_title">Stop app?</string>
+    <!-- Manage applications, text for dialog when killing persistent apps. [CHAR LIMIT=200] -->
+    <string name="stop_app_dialog_text">If you force stop an app, it may
+        misbehave.
+    </string>
+    <string name="stop_app_success_toast_text">
+        <xliff:g id="app_name" example="Radio">%1$s</xliff:g>
+        has been stopped.
+    </string>
 </resources>
